Rework macos tray and dock handling