@@ -93,6 +93,13 @@ project.ext {
     useBundledJavaFx = fullVersion && !(platformName == 'linux' && arch == 'arm64')
 }
 
+if (org.gradle.internal.os.OperatingSystem.current() == org.gradle.internal.os.OperatingSystem.LINUX) {
+    jvmRunArgs.addAll("--add-opens", "java.desktop/sun.awt.X11=io.xpipe.app")
+}
+if (org.gradle.internal.os.OperatingSystem.current() == org.gradle.internal.os.OperatingSystem.MAC_OS) {
+    jvmRunArgs.addAll("--add-exports", "java.desktop/com.apple.eawt=io.xpipe.app")
+}
+
 if (isFullRelease && rawVersion.contains("-")) {
     throw new IllegalArgumentException("Releases must have canonical versions")
 }
